# ubuntu-on-android

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_STATUS.md  CLAUDE.md  COMPILATION_ERRORS.md  COMPILATION_FIXES_SUMMARY.md  CONTRIBUTING.md  EMULATOR_SETUP.md  EMULATOR_TEST_RESULTS.md  FINAL_STATUS.md  GEMINI.md  INSTALLATION_STATUS.md  PHASE2_SUMMARY.md  PROGRESS.md  README.md  SCAFFOLD.md  SUMMARY.md  TASKS.md  build-and-install.bat  build.gradle.kts  build_assemble.txt  build_direct.txt  build_full.txt  build_post_clean.txt  build_result.txt  build_result_2.txt  build_result_clean.txt  build_result_delete.txt  build_result_final.txt  clean_log.txt  create-emulator.sh  error.txt  gradle.properties  gradlew.bat  launch-emulator.sh  local.properties  settings.gradle.kts  tasks_log.txt  test-on-emulator.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/pk-puzldai/: index.js  package.json
app/src/main/assets/scripts/: install-pk-puzldai.sh  setup-agent-env.sh  setup-devbox.sh  setup-tailscale.sh
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
assets/scripts/: agent_browser_server.js
docs/: tailscale-integration.md
docs/agents/: 01-architecture.md  02-android-shell.md  03-proot-integration.md  04-gui-interaction.md  05-packaging-storage.md  06-developer-experience.md  COORDINATION.md
md/: desclaimer.md  installation.md
native/: CMakeLists.txt
scripts/: build-native.sh  install-device.sh
scripts/ralph/: AGENT_NETWORK_PLAN.md  prd-server.json  prd.json  progress.txt  ralph.sh
(+52 files in other folders)
